# distance-measuring-service

./: .env-example  Cargo.toml  README.md  docker-compose.yaml  requirements.txt
src/: Dockerfile  main.rs
src/api/handlers/: distance.rs  health.rs  mod.rs
src/core/: config.rs  error.rs  result.rs
src/models/: distance.rs  error.rs  location.rs  mod.rs  unit.rs
src/utils/: response.rs
tests/: test_api.py
