[package]
name = "distance-measuring-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = [ "full" ] }
serde = { version = "1.0.217", features = [ "derive" ] }
serde_json = "1.0"
ntex = { version = "2.11.0", features = [ "tokio" ] }
once_cell = "1.20.3"
thiserror = "2.0.11"
dotenv = "0.15.0"
# do not update `derive_more` to 1.0.0
derive_more = { version = "0.99.18", features = [ "display", "error" ] }
log = "0.4.25"
env_logger = "0.11.6"


[profile.dev]
opt-level = 0
lto = "off"
panic = "unwind"
debug = true


[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
debug = false
strip = true
